--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --theme: theme.dark;
+  }
   .dark {
     --background: 222.2 47.4% 11.2%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
+    --txt-primary: 182 84% 88%;
+    --text-secondary: 0 0% 0%;
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 221.2 83.2% 53.3%;
     --primary-foreground: 210 40% 98%;
@@ -28,15 +33,16 @@
   .light {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
+    --text-primary: 0 0% 100%;
+    --text-secondary: 0 0% 0%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 221.2 83.2% 53.3%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 224, 87%, 80%;
+    --secondary: 0, 91%, 71%;
     --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210, 30%, 20%;
+    --muted: 0, 75%, 15%;
     --muted-foreground: 0 0% 0%;
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
